--- a/.classpath
+++ b/.classpath
@@ -2,5 +2,33 @@
 <classpath>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="lib" path="C:/Users/P K Shankar/Desktop/Selenium jar Files/activation-1.1.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/P K Shankar/Desktop/Selenium jar Files/byte-buddy-1.8.15.jar"/>
+	<classpathentry kind="lib" path="C:/Users/P K Shankar/Desktop/Selenium jar Files/client-combined-3.141.59.jar"/>
+	<classpathentry kind="lib" path="C:/Users/P K Shankar/Desktop/Selenium jar Files/client-combined-3.141.59-sources.jar"/>
+	<classpathentry kind="lib" path="C:/Users/P K Shankar/Desktop/Selenium jar Files/commons-codec-1.11.jar"/>
+	<classpathentry kind="lib" path="C:/Users/P K Shankar/Desktop/Selenium jar Files/commons-collections4-4.2.jar"/>
+	<classpathentry kind="lib" path="C:/Users/P K Shankar/Desktop/Selenium jar Files/commons-compress-1.18.jar"/>
+	<classpathentry kind="lib" path="C:/Users/P K Shankar/Desktop/Selenium jar Files/commons-exec-1.3.jar"/>
+	<classpathentry kind="lib" path="C:/Users/P K Shankar/Desktop/Selenium jar Files/commons-logging-1.2.jar"/>
+	<classpathentry kind="lib" path="C:/Users/P K Shankar/Desktop/Selenium jar Files/commons-math3-3.6.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/P K Shankar/Desktop/Selenium jar Files/curvesapi-1.05.jar"/>
+	<classpathentry kind="lib" path="C:/Users/P K Shankar/Desktop/Selenium jar Files/guava-25.0-jre.jar"/>
+	<classpathentry kind="lib" path="C:/Users/P K Shankar/Desktop/Selenium jar Files/htmlunit-driver-2.34.0-jar-with-dependencies.jar"/>
+	<classpathentry kind="lib" path="C:/Users/P K Shankar/Desktop/Selenium jar Files/jaxb-api-2.3.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/P K Shankar/Desktop/Selenium jar Files/jaxb-core-2.3.0.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/P K Shankar/Desktop/Selenium jar Files/jaxb-impl-2.3.0.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/P K Shankar/Desktop/Selenium jar Files/junit-4.12.jar"/>
+	<classpathentry kind="lib" path="C:/Users/P K Shankar/Desktop/Selenium jar Files/log4j-1.2.17.jar"/>
+	<classpathentry kind="lib" path="C:/Users/P K Shankar/Desktop/Selenium jar Files/okhttp-3.11.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/P K Shankar/Desktop/Selenium jar Files/okio-1.14.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/P K Shankar/Desktop/Selenium jar Files/poi-4.0.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/P K Shankar/Desktop/Selenium jar Files/poi-examples-4.0.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/P K Shankar/Desktop/Selenium jar Files/poi-excelant-4.0.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/P K Shankar/Desktop/Selenium jar Files/poi-ooxml-4.0.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/P K Shankar/Desktop/Selenium jar Files/poi-ooxml-schemas-4.0.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/P K Shankar/Desktop/Selenium jar Files/poi-scratchpad-4.0.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/P K Shankar/Desktop/Selenium jar Files/sqljdbc4-2.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/P K Shankar/Desktop/Selenium jar Files/xmlbeans-3.0.2.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
